# orm_project

./: exemplo_00.py  pyproject.toml
src/: pokemon.db
