[tool.poetry]
name = "orm-project"
version = "0.1.0"
description = ""
authors = ["Alexandre Lima <alexandrepompeu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.4"
requests = "^2.31.0"
sqlalchemy = "^2.0.29"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
